fixed index page link

--- a/themes/kube/layouts/index.html
+++ b/themes/kube/layouts/index.html
@@ -13,7 +13,7 @@
     <!-- <p>Zip-archive, includes all the source and site example files</p> -->
   </div>
   <div class="message focus" data-component="message"> <span class="close small"></span>
-    <a class="button inverted small " href="https://imperavi.com/kube/" >Rum</a> is easily <mark>extensible</mark> and <mark>possible</mark> (Lua features with <mark>LISP</mark> syntax and functional) to be embarked on software <mark>Go</mark>!
+    <a class="button inverted small " href="https://github.com/rumlang/rum" >Rum</a> is easily <mark>extensible</mark> and <mark>possible</mark> (Lua features with <mark>LISP</mark> syntax and functional) to be embarked on software <mark>Go</mark>!
   </div>
   <!--
   <div id="kube-features">
