--- a/themes/kube/layouts/index.html
+++ b/themes/kube/layouts/index.html
@@ -4,16 +4,17 @@
 
 <div id="main">
   <div id="hero">
+    <img src="/bottle-100x191.png" alt="{{.Title}}" width="100" height="191">
     <h1>{{.Title}}</h1>
     <p>{{.Description}}</p>
   </div>
   <div id="action-buttons">
-    <!-- <a class="button primary big" href="https://github.com/jeblister/kube/releases" onclick="_gaq.push(['_trackEvent', 'kube', 'download']);">Download</a> -->
+    <a class="button primary big" target="_blank" href="http://play.rumlang.org/" onclick="_gaq.push(['_trackEvent', 'rumlang', 'playground']);">Playground</a>
     <a class="button outline big" href="https://github.com/rumlang/rum" onclick="_gaq.push(['_trackEvent', 'rumlang', 'github']);">View on Github</a>
     <!-- <p>Zip-archive, includes all the source and site example files</p> -->
   </div>
-  <div class="message focus" data-component="message"> <span class="close small"></span>
-    <a class="button inverted small " href="https://github.com/rumlang/rum" >Rum</a> is easily <mark>extensible</mark> and <mark>possible</mark> (Lua features with <mark>LISP</mark> syntax and functional) to be embarked on software <mark>Go</mark>!
+  <div class="message focus" data-component="message">
+    <a class="button inverted small " href="https://github.com/rumlang/rum" >Rum</a> is <mark>functional</mark> language, easily <mark>extensible</mark> and <mark>possible</mark> (Lua features with <mark>LISP</mark> syntax and functional) to be embarked on software <mark>Go</mark>!
   </div>
   <!--
   <div id="kube-features">
